--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="./one-solid.svg" type="image/x-icon">
   <title>100 Days CSS - Day 1 | Mateus A. Carvalho</title>
 </head>
 <body>
